HoverSlideshowAnimated: fix preloaded imgs overflowing

--- a/src/HoverSlideshowAnimated.css
+++ b/src/HoverSlideshowAnimated.css
@@ -34,4 +34,5 @@
 	visibility: hidden;
 	width: 0;
 	height: 0;
+	overflow: hidden;
 }
